--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   archive: ^3.1.2
   args: ^2.1.0
   json_annotation: ^4.0.1
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^2.0.4
   http: ^0.13.3
   logging: ^1.0.1
   meta: ^1.3.0
@@ -24,8 +24,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.2
-  json_serializable: ^4.1.1
-  freezed: ^0.14.1
+  json_serializable: ^6.1.4
+  freezed: ^2.1.0+1
   matcher: ^0.12.10
   mock_web_server: ^5.0.0-nullsafety.1
   mockito: ^5.0.7
